Fix error object name
