# docs/swagger.yaml
@@ -6,6 +6,11 @@ definitions:
         example: "010990"
         type: string
     type: object
+  controllers.ErrorResponse:
+    properties:
+      errorMessage:
+        type: string
+    type: object
   controllers.UserResponse:
     properties:
       countryCode:
@@ -93,6 +98,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controllers.UserResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
       summary: Get attributes for the authenticated user
     put:
       consumes:
@@ -111,6 +120,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controllers.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
       summary: Modify attributes for the authenticated user
   /v1/user/confirm-email:
     post:
@@ -124,13 +141,33 @@ paths:
         schema:
           $ref: '#/definitions/controllers.ConfirmEmailRequest'
       responses:
-        "200":
+        "204":
           description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
       summary: Submit an email confirmation key
   /v1/user/send-confirmation-email:
     post:
       responses:
-        "200":
+        "204":
           description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
       summary: Send a confirmation email to the authenticated user
 swagger: "2.0"
